[gd_scene load_steps=8 format=3 uid="uid://1tcmbawunbcg"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_fuu34"]
[ext_resource type="Texture2D" uid="uid://ck4c68mo1h0a0" path="res://assets/player/nave-g.png" id="1_k4su5"]
[ext_resource type="Texture2D" uid="uid://dv8fmpcvgu5k8" path="res://assets/player/nave-xl.png" id="3_7y136"]
[ext_resource type="AudioStream" uid="uid://cks7ftv1seko2" path="res://assets/audio/hit.wav" id="3_73gh2"]
[ext_resource type="AudioStream" uid="uid://bcy3gpdpv3bad" path="res://assets/audio/gift.ogg" id="5_jeyam"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2nndq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k4su5")
}, {
"duration": 1.0,
"texture": ExtResource("3_7y136")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5er5"]
height = 68.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 26
motion_mode = 1
script = ExtResource("1_fuu34")
metadata/_edit_group_ = true

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2nndq")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k5er5")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_73gh2")

[node name="PowerUpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jeyam")

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="gift_picked" from="." to="." method="_on_gift_picked"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
